@@ -18,6 +18,7 @@ Version 1.0.9 (February xxh 2013)
 - Changed: Manual Add light switchtypes are now complete
 - Implemented: Dimmer change now directly updates the user interface status
 - Fixed: Mobile desktop, blind open icon
+- Fixed: Day display for Month/Year utility graph
 
 Version 1.0.8 (February 3th 2013)
 - Fixed Hardware Enabled/Disabled option
